5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4384/executions/1753_1522.log
== TEST (2019-05-16 19:33:49) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=0
while(qi==0):
	acu=((qi-dm)+qm)-qr
	cont=cont+1
print(cont)
-- OUTPUT:
250
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:34:09) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=0
while(qi==0):
	acu=((qi-dm)+qm)-qr
	cont=cont+1
print(cont)
-- EXECUTION TIME:
0.263273
-- TEST CASE 1:
---- input:
8000
6000
100
40
---- correct output:
2
---- user output:
0
-- TEST CASE 2:
---- input:
1500
7500
3265
4000
---- correct output:
1
---- user output:
0
-- TEST CASE 3:
---- input:
7000
3000
500
100
---- correct output:
3
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:34:35) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=0
while(acu!0):
	acu=((qi-dm)+qm)-qr
	cont=cont+1
print(cont)
-- ERROR:
File "XXXX", line 8
    while(acu!0):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:34:42) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=0
while(acu!=0):
	acu=((qi-dm)+qm)-qr
	cont=cont+1
print(cont)
-- ERROR:
File "XXXX", line 8
    while(acu!0):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:35:10) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=1
while(acu!=0):
	acu=((qi-dm)+qm)-qr
	cont=cont+1
print(cont)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:35:30) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=1
while(acu!=0):
	acu=((qi-dm)+qm)-qr
	cont=cont+1
print(cont)
-- EXECUTION TIME:
0.205241
-- TEST CASE 1:
---- input:
8000
6000
100
40
---- correct output:
2
---- user output:
1
-- TEST CASE 2:
---- input:
1500
7500
3265
4000
---- correct output:
1
---- user output:
1
-- TEST CASE 3:
---- input:
7000
3000
500
100
---- correct output:
3
---- user output:
1
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:03) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=1
cont=1
while(acu!=0):
	acu=((qi-dm)+qm)-qr
	cont=cont+1
print(cont)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:23) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=1
cont=1
while(acu!=0):
	acu=((qi-dm)+qm)-qr
	cont=cont+1
print(cont)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:28) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=1
while(acu!=0):
	acu=((qi-dm)+qm)-qr
	cont=cont+1
print(cont)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:36:36) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=1
while(acu!=0):
	acu=((qi-dm)+qm)-qr
	cont=cont+1
print(cont)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:36:53) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=1
while(acu!=0):
	acu=((qi-dm)+qm)-qr
	cont=cont+1
print(cont)
-- EXECUTION TIME:
0.178117
-- TEST CASE 1:
---- input:
8000
6000
100
40
---- correct output:
2
---- user output:
1
-- TEST CASE 2:
---- input:
1500
7500
3265
4000
---- correct output:
1
---- user output:
1
-- TEST CASE 3:
---- input:
7000
3000
500
100
---- correct output:
3
---- user output:
1
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:37:56) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=1
while(acu!=0):
	acu=(((qi-dm)+qm)-qr)
	cont=cont+1
print(cont)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:38:08) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=1
while(acu!=0):
	acu=(((qi-dm)+qm)-qr)
	cont=cont+1
print(cont)
-- EXECUTION TIME:
0.162129
-- TEST CASE 1:
---- input:
8000
6000
100
40
---- correct output:
2
---- user output:
1
-- TEST CASE 2:
---- input:
1500
7500
3265
4000
---- correct output:
1
---- user output:
1
-- TEST CASE 3:
---- input:
7000
3000
500
100
---- correct output:
3
---- user output:
1
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:38:16) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=0
while(acu!=0):
	acu=(((qi-dm)+qm)-qr)
	cont=cont+1
print(cont)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:38:40) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=50
while(acu!=0):
	acu=(((qi-dm)+qm)-qr)
	cont=cont+1
print(cont)
-- OUTPUT:
50
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:38:51) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=50
while(acu!=0):
	acu=(((qi-dm)+qm)-qr)
	cont=cont+1
print(cont)
-- EXECUTION TIME:
0.175212
-- TEST CASE 1:
---- input:
8000
6000
100
40
---- correct output:
2
---- user output:
50
-- TEST CASE 2:
---- input:
1500
7500
3265
4000
---- correct output:
1
---- user output:
50
-- TEST CASE 3:
---- input:
7000
3000
500
100
---- correct output:
3
---- user output:
50
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:39:16) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=0
while(acu!=0):
	acu=(((qi-dm)+qm)-qr)
	cont=cont+1
print(cont)
-- EXECUTION TIME:
0.306207
-- TEST CASE 1:
---- input:
8000
6000
100
40
---- correct output:
2
---- user output:
0
-- TEST CASE 2:
---- input:
1500
7500
3265
4000
---- correct output:
1
---- user output:
0
-- TEST CASE 3:
---- input:
7000
3000
500
100
---- correct output:
3
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:39:18) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=0
while(acu!=0):
	acu=(((qi-dm)+qm)-qr)
	cont=cont+1
print(cont)
-- OUTPUT:
50
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:39:19) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=0
while(acu!=0):
	acu=(((qi-dm)+qm)-qr)
	cont=cont+1
print(cont)
-- EXECUTION TIME:
0.211911
-- TEST CASE 1:
---- input:
8000
6000
100
40
---- correct output:
2
---- user output:
0
-- TEST CASE 2:
---- input:
1500
7500
3265
4000
---- correct output:
1
---- user output:
0
-- TEST CASE 3:
---- input:
7000
3000
500
100
---- correct output:
3
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:39:26) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=0
while(acu!=0):
	acu=(((qi-dm)+qm)-qr)
	cont=cont+1
print(cont)
-- OUTPUT:
50
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:39:44) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=0
while(acu!=0):
	acu=(((qi-dm)+qm)-qr)
	cont=cont+1
print(cont)
-- EXECUTION TIME:
0.189199
-- TEST CASE 1:
---- input:
8000
6000
100
40
---- correct output:
2
---- user output:
0
-- TEST CASE 2:
---- input:
1500
7500
3265
4000
---- correct output:
1
---- user output:
0
-- TEST CASE 3:
---- input:
7000
3000
500
100
---- correct output:
3
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:39:49) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=1
while(acu!=0):
	acu=(((qi-dm)+qm)-qr)
	cont=cont+1
print(cont)
-- EXECUTION TIME:
0.198109
-- TEST CASE 1:
---- input:
8000
6000
100
40
---- correct output:
2
---- user output:
1
-- TEST CASE 2:
---- input:
1500
7500
3265
4000
---- correct output:
1
---- user output:
1
-- TEST CASE 3:
---- input:
7000
3000
500
100
---- correct output:
3
---- user output:
1
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:39:52) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=1
while(acu!=0):
	acu=(((qi-dm)+qm)-qr)
	cont=cont+1
print(cont)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:39:54) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=1
while(acu!=0):
	acu=(((qi-dm)+qm)-qr)
	cont=cont+1
print(cont)
-- EXECUTION TIME:
0.167261
-- TEST CASE 1:
---- input:
8000
6000
100
40
---- correct output:
2
---- user output:
1
-- TEST CASE 2:
---- input:
1500
7500
3265
4000
---- correct output:
1
---- user output:
1
-- TEST CASE 3:
---- input:
7000
3000
500
100
---- correct output:
3
---- user output:
1
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:40:25) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=1
while(acu!=0):
	acu=(((qi-dm)+qm)-qr)
	cont=cont+1
print(cont)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:40:56) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=1
while(cont!=0):
	acu=(((qi-dm)+qm)-qr)
	cont=cont+1
print(cont)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:42:20) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=1
while(!=0):
	acu=(((qi-dm)+qm)-qr)
	cont=cont
print(cont)
-- ERROR:
File "XXXX", line 8
    while(!=0):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:42:27) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=1
while(acu!=0):
	acu=(((qi-dm)+qm)-qr)
	cont=cont
print(cont)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:42:50) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=1
while(acu!=0):
	acu=(((qi-dm)+qm)-qr)
	cont=cont
print(cont)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:43:01) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=1
while(acu!=0):
	acu=(((qi-dm)+qm)-qr)
	cont=cont*acu
print(cont)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:43:15) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=1
while(acu!=0):
	acu=(((qi-dm)+qm)-qr)
	cont=cont*acu
print(cont)
-- EXECUTION TIME:
0.462491
-- TEST CASE 1:
---- input:
8000
6000
100
40
---- correct output:
2
---- user output:
1
-- TEST CASE 2:
---- input:
1500
7500
3265
4000
---- correct output:
1
---- user output:
1
-- TEST CASE 3:
---- input:
7000
3000
500
100
---- correct output:
3
---- user output:
1
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:43:35) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=qi
cont=1
while(acu!=0):
	acu=(((qi-dm)+qm)-qr)
	cont=cont
print(cont)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:45:43) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=1
while(acu!=0):
	acu=qr
	cont=cont
print(cont)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:45:50) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=1
while(acu!=0):
	acu=qr
	cont=cont
print(cont)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:46:03) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=0
while(acu!=0):
	acu=qr
	cont=cont+1
print(cont)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:46:07) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=0
while(acu!=0):
	acu=qr
	cont=cont+1
print(cont)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:46:14) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=0
while(acu!=0):
	acu=qr
	cont=cont+1
print(cont)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:46:57) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=1
while(acu!=0):
	acu=(((qi-dm)+qm)-qr)
	cont=cont
print(cont)
-- EXECUTION TIME:
0.569351
-- TEST CASE 1:
---- input:
8000
6000
100
40
---- correct output:
2
---- user output:
1
-- TEST CASE 2:
---- input:
1500
7500
3265
4000
---- correct output:
1
---- user output:
1
-- TEST CASE 3:
---- input:
7000
3000
500
100
---- correct output:
3
---- user output:
valorem moedas: valor de despesas: moeda: roubadas: 1
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:47:06) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=1
while(acu!=0):
	acu=(((qi-dm)+qm)-qr)
	cont=cont
print(cont)
-- EXECUTION TIME:
0.354635
-- TEST CASE 1:
---- input:
8000
6000
100
40
---- correct output:
2
---- user output:
1
-- TEST CASE 2:
---- input:
1500
7500
3265
4000
---- correct output:
1
---- user output:
1
-- TEST CASE 3:
---- input:
7000
3000
500
100
---- correct output:
3
---- user output:
1
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:47:07) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=1
while(acu!=0):
	acu=(((qi-dm)+qm)-qr)
	cont=cont
print(cont)
-- EXECUTION TIME:
0.485575
-- TEST CASE 1:
---- input:
8000
6000
100
40
---- correct output:
2
---- user output:
1
-- TEST CASE 2:
---- input:
1500
7500
3265
4000
---- correct output:
1
---- user output:
1
-- TEST CASE 3:
---- input:
7000
3000
500
100
---- correct output:
3
---- user output:
1
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:47:10) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=1
while(acu!=0):
	acu=(((qi-dm)+qm)-qr)
	cont=cont=1
print(cont)
-- EXECUTION TIME:
0.438949
-- TEST CASE 1:
---- input:
8000
6000
100
40
---- correct output:
2
---- user output:
1
-- TEST CASE 2:
---- input:
1500
7500
3265
4000
---- correct output:
1
---- user output:
1
-- TEST CASE 3:
---- input:
7000
3000
500
100
---- correct output:
3
---- user output:
1
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:47:11) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=1
while(acu!=0):
	acu=(((qi-dm)+qm)-qr)
	cont=cont=1
print(cont)
-- EXECUTION TIME:
0.454465
-- TEST CASE 1:
---- input:
8000
6000
100
40
---- correct output:
2
---- user output:
1
-- TEST CASE 2:
---- input:
1500
7500
3265
4000
---- correct output:
1
---- user output:

-- TEST CASE 3:
---- input:
7000
3000
500
100
---- correct output:
3
---- user output:
1
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:47:11) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=1
while(acu!=0):
	acu=(((qi-dm)+qm)-qr)
	cont=cont=1
print(cont)
-- EXECUTION TIME:
0.641289
-- TEST CASE 1:
---- input:
8000
6000
100
40
---- correct output:
2
---- user output:
1
-- TEST CASE 2:
---- input:
1500
7500
3265
4000
---- correct output:
1
---- user output:
1
-- TEST CASE 3:
---- input:
7000
3000
500
100
---- correct output:
3
---- user output:
1
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:47:14) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=1
while(acu!=0):
	acu=(((qi-dm)+qm)-qr)
	cont=cont=1
print(cont)
-- EXECUTION TIME:
0.623709
-- TEST CASE 1:
---- input:
8000
6000
100
40
---- correct output:
2
---- user output:
1
-- TEST CASE 2:
---- input:
1500
7500
3265
4000
---- correct output:
1
---- user output:
1
-- TEST CASE 3:
---- input:
7000
3000
500
100
---- correct output:
3
---- user output:
1
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:47:14) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=1
while(acu!=0):
	acu=(((qi-dm)+qm)-qr)
	cont=cont=1
print(cont)
-- EXECUTION TIME:
0.593311
-- TEST CASE 1:
---- input:
8000
6000
100
40
---- correct output:
2
---- user output:
1
-- TEST CASE 2:
---- input:
1500
7500
3265
4000
---- correct output:
1
---- user output:
1
-- TEST CASE 3:
---- input:
7000
3000
500
100
---- correct output:
3
---- user output:
1
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:47:32) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=1
while(acu!=0):
	acu=(((qi-dm)+qm)-qr)
	cont=cont+1
print(cont)
-- EXECUTION TIME:
0.365069
-- TEST CASE 1:
---- input:
8000
6000
100
40
---- correct output:
2
---- user output:
1
-- TEST CASE 2:
---- input:
1500
7500
3265
4000
---- correct output:
1
---- user output:
1
-- TEST CASE 3:
---- input:
7000
3000
500
100
---- correct output:
3
---- user output:
1
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:47:34) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=1
while(acu!=0):
	acu=(((qi-dm)+qm)-qr)
	cont=cont+1
print(cont)
-- EXECUTION TIME:
0.631049
-- TEST CASE 1:
---- input:
8000
6000
100
40
---- correct output:
2
---- user output:
1
-- TEST CASE 2:
---- input:
1500
7500
3265
4000
---- correct output:
1
---- user output:
1
-- TEST CASE 3:
---- input:
7000
3000
500
100
---- correct output:
3
---- user output:
1
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:47:34) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=1
while(acu!=0):
	acu=(((qi-dm)+qm)-qr)
	cont=cont+1
print(cont)
-- EXECUTION TIME:
0.618055
-- TEST CASE 1:
---- input:
8000
6000
100
40
---- correct output:
2
---- user output:
1
-- TEST CASE 2:
---- input:
1500
7500
3265
4000
---- correct output:
1
---- user output:
1
-- TEST CASE 3:
---- input:
7000
3000
500
100
---- correct output:
3
---- user output:
1
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:47:34) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=1
while(acu!=0):
	acu=(((qi-dm)+qm)-qr)
	cont=cont+1
print(cont)
-- EXECUTION TIME:
0.625345
-- TEST CASE 1:
---- input:
8000
6000
100
40
---- correct output:
2
---- user output:
1
-- TEST CASE 2:
---- input:
1500
7500
3265
4000
---- correct output:
1
---- user output:
1
-- TEST CASE 3:
---- input:
7000
3000
500
100
---- correct output:
3
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:48:33) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=1
while(acu!=0):
	qtd=(((qi-dm)+qm)-qr)
	acu=qtd
	cont=cont+1
print(cont)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:48:46) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=1
while(acu!=0):
	qtd=(((qi-dm)+qm)-qr)
	acu=qtd
	cont=cont+1
print(cont)
-- EXECUTION TIME:
0.409057
-- TEST CASE 1:
---- input:
8000
6000
100
40
---- correct output:
2
---- user output:
1
-- TEST CASE 2:
---- input:
1500
7500
3265
4000
---- correct output:
1
---- user output:
1
-- TEST CASE 3:
---- input:
7000
3000
500
100
---- correct output:
3
---- user output:
1
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:49:01) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=1
while(acu=0):
	qtd=(((qi-dm)+qm)-qr)
	acu=qtd
	cont=cont+1
print(cont)
-- EXECUTION TIME:
0.509456
-- ERROR:
  File "/home/codebench/codes/1753/1522/main.py", line 8
    while(acu=0):
             ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:49:01) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=1
while(acu=0):
	qtd=(((qi-dm)+qm)-qr)
	acu=qtd
	cont=cont+1
print(cont)
-- ERROR:
File "XXXX", line 8
    while(acu=0):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:49:01) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=1
while(cont!=0):
	acu=(((qi-dm)+qm)-qr)
	cont=cont+1
print(cont)
-- EXECUTION TIME:
469.511
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:49:02) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=1
while(acu=0):
	qtd=(((qi-dm)+qm)-qr)
	acu=qtd
	cont=cont+1
print(cont)
-- ERROR:
File "XXXX", line 8
    while(acu=0):
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:49:05) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=1
while(acu==0):
	qtd=(((qi-dm)+qm)-qr)
	acu=qtd
	cont=cont+1
print(cont)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:49:18) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=1
while(acu==0):
	qtd=(((qi-dm)+qm)-qr)
	acu=qtd
	cont=cont+1
print(cont)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 19:49:43) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=1
while(qi==0):
	qtd=(((qi-dm)+qm)-qr)
	acu=qtd
	cont=cont+1
print(cont)
-- OUTPUT:
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 19:49:55) 
-- CODE:
qi=int(input("valorem moedas: "))
dm=int(input("valor de despesas: "))
qm=int(input("moeda: "))
qr=int(input("roubadas: "))

acu=0
cont=1
while(qi==0):
	qtd=(((qi-dm)+qm)-qr)
	acu=qtd
	cont=cont+1
print(cont)
-- EXECUTION TIME:
0.176582
-- TEST CASE 1:
---- input:
8000
6000
100
40
---- correct output:
2
---- user output:
1
-- TEST CASE 2:
---- input:
1500
7500
3265
4000
---- correct output:
1
---- user output:
1
-- TEST CASE 3:
---- input:
7000
3000
500
100
---- correct output:
3
---- user output:
1
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
